--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python = "^3.11"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
 pytest-cov = "^3.0"
+pytest-asyncio = "^0.23.6"
 
 [tool.poetry.group.docs]
 optional = true
