--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ prerelease = true
 [tool.pytest.ini_options]
 addopts = "-v -Wdefault --cov=aionut --cov-report=term-missing:skip-covered"
 pythonpath = ["src"]
+log_cli = "true"
 
 [tool.coverage.run]
 branch = true
